2.3/deploy-configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-deployment
  labels:
    app: hwdeploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hwdeploy
  template:
    metadata:
      labels:
        app: hwdeploy
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginxpage
          mountPath: "/usr/share/nginx/html"
          readOnly: true
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
      volumes:
      - name: nginxpage
        configMap:
          name: ngix-cm
---
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
spec:
  type: NodePort
  selector:
    app: hwdeploy
  ports:
  - name: nginx-port
    protocol: TCP
    port: 9001
    targetPort: 80
    nodePort: 30080
  - name: multitool-port
    protocol: TCP
    port: 9002
    targetPort: 8080
    nodePort: 30880
