2.3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-deployment
  labels:
    app: hwdeploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hwdeploy
  template:
    metadata:
      labels:
        app: hwdeploy
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: netology-svc
spec:
  selector:
    app: hwdeploy
  ports:
  - name: nginx-port
    protocol: TCP
    port: 9001
    targetPort: 80
  - name: multitool-port
    protocol: TCP
    port: 9002
    targetPort: 8080

---
apiVersion: v1
kind: Pod
metadata:
  name: testpod
spec:
  containers:
  - name: testmultitool
    image: wbitt/network-multitool:latest
    ports:
      - containerPort: 2080
