2.3/https-configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-deployment
  labels:
    app: hwdeploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hwdeploy
  template:
    metadata:
      labels:
        app: hwdeploy
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.2
        volumeMounts:
        - name: nginxpage
          mountPath: "/usr/share/nginx/html"
          readOnly: true
      volumes:
      - name: nginxpage
        configMap:
          name: ngix-cm
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: hwdeploy
  ports:
  - name: nginx-port
    protocol: TCP
    port: 80
